--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <nav style="background-color: rgb(55, 242, 242);" class=" border-gray-200 dark:bg-gray-900">
         <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl px-4 md:px-6 py-2.5">
             <a href="" class="flex items-center">
-                <img src="https://my.gov.au/content/dam/mygov/images/brand/logos/myGov-logo-cobranded-black.svg" class="mr-3 h-12 sm:h-9" alt="">
+                <img src="https://beconnected.esafety.gov.au/pluginfile.php/84211/mod_resource/content/3/Activity%202%20Panel%202.png" class="mr-3 h-12 sm:h-9" alt="">
             </a>
 
             <div class="flex flex-row">
